--- a/src/app/pages/inicio/registro/registro.page.html
+++ b/src/app/pages/inicio/registro/registro.page.html
@@ -6,87 +6,68 @@
           <form id="registration-form">
             <ion-card-title>Registro:</ion-card-title><br>
             <div class="input-row">
-              <!--NOMBRE-->
+              <!-- NOMBRE -->
               <ion-input label="Nombre:" type="text" label-placement="floating" fill="outline" placeholder="Mario"
                 name="nombreU" required [(ngModel)]="nombreUValue" (ionBlur)="verificarFormulario()"
                 (keydown)="valiNombre($event)">
               </ion-input>
-              <!--VALIDACION-->
-              <div class="error-message" *ngIf="!formularioValido">
-                <p *ngIf="nombreUValue.length === 0">El nombre es obligatorio.</p>
-                <p *ngIf="nombreUValue.length > 0 && !formularioValido">El nombre solo debe contener letras y tener
-                  entre 1 y 15 caracteres.</p>
-              </div>
+              <!-- VALIDACION -->
+              <div class="error-message" *ngIf="errors.nombreU">{{ errors.nombreU }}</div>
             </div>
-            <!--APELLIDO-->
+            <!-- APELLIDO -->
             <ion-input label="Apellido:" type="text" label-placement="floating" fill="outline" placeholder="Lopez"
-              name="nombreU" required [(ngModel)]="apellidoUValue" (ionBlur)="verificarFormulario()"
+              name="apellidoU" required [(ngModel)]="apellidoUValue" (ionBlur)="verificarFormulario()"
               (keydown)="ValiApellido($event)">
             </ion-input>
-            <!--VALIDACION-->
-            <div class="error-message" *ngIf="!formularioValido">
-              <p *ngIf="nombreUValue.length === 0">El nombre es obligatorio.</p>
-              <p *ngIf="nombreUValue.length > 0 && !formularioValido">El nombre solo debe contener letras y tener entre
-                1 y 15 caracteres.</p>
-            </div>
-            <!--RUT-->
+            <!-- VALIDACION -->
+            <div class="error-message" *ngIf="errors.apellidoU">{{ errors.apellidoU }}</div>
+            <!-- RUT -->
             <ion-input label="RUT:" type="text" label-placement="floating" fill="outline" placeholder="25.345.678-2"
               name="rut" required [(ngModel)]="rutValue" (ionBlur)="verificarFormulario()" (keydown)="valiRut($event)">
             </ion-input>
-            <!--VALIDACION-->
-            <div class="error-message" *ngIf="!formularioValido">
-              <p *ngIf="rutValue.length === 0">El RUT es obligatorio.</p>
-              <p *ngIf="rutValue.length > 0 && !formularioValido">El RUT no tiene un formato válido.</p>
-            </div>
-            <!--EMAIL-->
+            <!-- VALIDACION -->
+            <div class="error-message" *ngIf="errors.rut">{{ errors.rut }}</div>
+            <!-- EMAIL -->
             <ion-input label="Email:" type="text" label-placement="floating" fill="outline"
               placeholder="correo@example.com" name="email" required [(ngModel)]="emailValue"
               (ionBlur)="verificarFormulario()" (keydown)="valiEmail($event)">
             </ion-input>
-            <!--VALIDACION EMAIL-->
-            <div class="error-message" *ngIf="!formularioValido">
-              <p *ngIf="emailValue.length === 0">El correo electrónico es obligatorio.</p>
-              <p *ngIf="emailValue.length > 0 && !formularioValido">El correo electrónico no tiene un formato válido.
-              </p>
-            </div>
-            <!--CONTRASEÑA-->
+            <!-- VALIDACION EMAIL -->
+            <div class="error-message" *ngIf="errors.email">{{ errors.email }}</div>
+            <!-- CONTRASEÑA -->
             <ion-input label="Contraseña:" type="password" label-placement="floating" fill="outline"
               placeholder="M1@password" name="password" required [(ngModel)]="passwordValue"
               (ionBlur)="verificarFormulario()" (keydown)="valiPassword($event)">
             </ion-input>
-            <!--VALIDACION CONTRASEÑA-->
-            <div class="error-message" *ngIf="!formularioValido">
-              <p *ngIf="passwordValue.length === 0">La contraseña es obligatoria.</p>
-              <p *ngIf="passwordValue.length > 0 && !formularioValido">La contraseña no cumple con los requisitos.</p>
-            </div>
-            <!--CONFIRMAR CONTRASEÑA-->
+            <!-- VALIDACION CONTRASEÑA -->
+            <div class="error-message" *ngIf="errors.password">{{ errors.password }}</div>
+            <!-- CONFIRMAR CONTRASEÑA -->
             <ion-input label="Confirmar Contraseña:" type="password" label-placement="floating" fill="outline"
               placeholder="Confirmar contraseña" name="confirmPassword" required [(ngModel)]="confirmPasswordValue"
               (ionBlur)="verificarFormulario()">
             </ion-input>
-            <!--VALIDACION-->
-            <div class="error-message" *ngIf="!formularioValido">
-              <p *ngIf="passwordValue.length === 0">La contraseña es obligatoria.</p>
-              <p *ngIf="passwordValue.length > 0 && !formularioValido">La contraseña no cumple con los requisitos.</p>
-              <p *ngIf="passwordValue !== confirmPasswordValue">Las contraseñas no coinciden.</p>
-            </div>
+            <!-- VALIDACION -->
+            <div class="error-message" *ngIf="errors.confirmPassword">{{ errors.confirmPassword }}</div>
             <!-- Pregunta de seguridad -->
-            <ion-select label="Pregunta de Seguridad" label-placement="floating" fill="outline" [(ngModel)]="preguntaSeguridad" required>
+            <ion-select label="Pregunta de Seguridad" label-placement="floating" fill="outline"
+              [(ngModel)]="preguntaSeguridad" required>
               <ion-select-option value="1">¿Cuál es tu película favorita?</ion-select-option>
               <ion-select-option value="2">¿Nombre de tu mascota?</ion-select-option>
               <ion-select-option value="3">¿Color favorito?</ion-select-option>
             </ion-select><br>
-            <!--VALIDACION-->
+            <!-- VALIDACION -->
             <div class="error-message" *ngIf="!preguntaSeguridad">
               <p>Por favor, seleccione una pregunta de seguridad.</p>
             </div>
             <!-- Respuesta a la pregunta de seguridad -->
-            <ion-input label="Respuesta a la Pregunta de Seguridad" type="text" label-placement="floating" fill="outline"
-              placeholder="Respuesta" name="respuestaSeguridad" [(ngModel)]="respuestaSeguridad" required>
+            <ion-input label="Respuesta a la Pregunta de Seguridad" type="text" label-placement="floating"
+              fill="outline" placeholder="Respuesta" name="respuestaSeguridad" [(ngModel)]="respuestaSeguridad"
+              required>
             </ion-input>
             <!--BOTON-->
             <ion-button color="dark" class="center-buttons" (click)="irAPaginaSiguiente()"
               [disabled]="!formularioValido">Registrarse</ion-button>
+            <!--MENSAJITO-->
             <p1 [routerLink]="['/inicio-sesion']" style="text-align: center;"> ¿Ya tienes una cuenta? Inicia sesión aquí
             </p1><br>
           </form>
