--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,6 +72,20 @@
         </ion-grid>
       </ion-item>
 
+
+      <ion-item>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="auto">
+              <ion-icon name="headset-outline"></ion-icon>
+            </ion-col>
+            <ion-col>
+              <ion-label [routerLink]="['/feriados']"> Feriados</ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+
     </ion-content>
   </ion-menu>
   <ion-router-outlet id="menu-content"></ion-router-outlet>
